--- a/2_3_2015.md
+++ b/2_3_2015.md
@@ -1,14 +1,119 @@
 2/3/15
 
 ## Community Sketch
-Select a community to visit.  (What constitutes a community?)
+- Select a community to visit.  (What constitutes a community?)
+- Current Event
+- Community Sketch
+- Reflection Paper
+- Comparisons of visit with your own community
+- Summation
 
-Current Event
+# Asian American Movement I: Origins, Activities, Legacy.
 
-Community Sketch
+## Previous-internal colonial
 
-Reflection Paper
+White European & Third World incorporration into American society different
 
-Comparisons of visit with your own community
+3 assumptions about commonality: colonized, racial oppression & tw/TW (within the US and outside of the United States) global linkage.
 
-Summation
+Cultural oppression constrains, transforms, destroys original values, orientation and ways of life.
+
+## Social Constructions (Stereotypes & Prejudice)
+
+- Race
+
+- Ethnicity
+
+- Gender
+
+- Sexuality
+
+- Intersectionality race, classs, gender, sexuality
+
+### Stereotypes
+Blanketed statements that give certain traits to certain groups.  They have a homogenizing effect.
+
+### Prejudice
+Arbitrary beliefs or feelings towards a particular group.
+
+### What is the impact of social constructions?
+
+1. Immigatrion Laws
+2. Racial Profiling
+3. Hate Crimes
+
+## Define Asian American Movement
+- Multi-class/ethnic/sited conglomeration.
+- Sought to improve the lives of workers and poor.
+- Raised consciousness of its participats.
+- Fought vs. negative stereotypes & racism
+- Challeneged institutionalized racism
+- Supported third world national liberation
+
+### Worlds
+1. US, Allies
+2. Soviet Union, Satelitte
+3. Colonized or newly decolonized
+
+## Political Participation Impeded
+- Exclusion
+- Segregation
+- Internment
+- McCarthyism
+- Conservative Community Establishment
+
+## Fair Play Committee 1944
+Draft dodgers that would only fight if parents were released from camps
+
+## Cold War 1950s
+- Korean War(1950-53)
+- McCarran Internal Security Act (1950)
+- China Daily News Trial (1951)
+- Violation Trading with Enemy Act (1917)
+- Reversal Stereotypes (1942)
+- US Consul in Hong Kong Everett Drumright charges (1955)
+- US Attorney Subpeonaes (1956)
+- FBI J. Edgar Hoover
+- Confession Program (1956)
+
+## Emergence of new social movments
+### Rise of New Social movements
+- 1954 Civil Rights
+- 1964 Free Speech
+- 1965 Black Power
+- 1965 Anti-war
+- International Youth Movements
+- Anti-conlonial movements for decolonization
+
+## Civil Rights Movement
+- Goal: End Jim Crow
+- End Segregation
+- Barrier: white supremacy
+
+## Black Power Movmenet
+- Civil Rights Limited.
+- Urban poverty persisted
+- White supremacy resilient
+- Black Power New Phase
+- SNCC
+- Black Panther Party: (Self-determination, Internal Colonial Model, Third World)
+
+## Operation Rolling Thunder. 90,000 lives (1965 - 8)
+- MLK 1967 statement linking the Vietnam War to c.r.m.
+- - Unjust war
+- - Only 25% communist
+- - Only wanted self-determination
+- - Cruel Manipulation of poor
+- - Vietnam War Immoral
+- American & Vietnamese deaths increasing
+- TV to living room
+
+## General Wm. Westmoreland
+- "The Origintal doesn't put the same high price on life as does a Westerner.. We value life and human dignity,  They don't care about life and human dignity."
+- Referred to Vietnamese as "gook" (1898 US-Phil War, 1980-83 - Gook, Charlie).
+
+## Toll in lives
+- Vietnamese: 3-4 million
+- Laotians and Cambodian: 1.5 - 2 million
+- Americans: 58,159
+- Ronald Reagan: parking lot
